--- a/templates/single-post.html
+++ b/templates/single-post.html
@@ -4,7 +4,8 @@
 
 			<p>
 				{{blog.body}}
-            </p>
-
+			</p>
+			<p><small><i>Written by: <a href='/singleUser?uid={{blog.owner_id}}'> {{username}} </a>
+			</i></small></p>
 
 {% endblock %}
